# pngx

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json  settings.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  release.yaml
crates/pngx/: Cargo.toml
crates/pngx-client/: Cargo.toml
crates/pngx-client/src/: client.rs  error.rs  lib.rs  types.rs
crates/pngx/src/: config.rs  main.rs  output.rs  resolve.rs
crates/pngx/src/commands/: auth.rs  correspondents.rs  document_types.rs  documents.rs  inbox.rs  mcp.rs  mod.rs  search.rs  tags.rs  version.rs
docs/brainstorms/: 2026-03-06-agent-native-cli-brainstorm.md
docs/plans/: 2026-03-06-feat-agent-native-cli-plan.md
hooks/: hooks.json  nudge-skill.sh
skills/paperless/: SKILL.md
skills/paperless-search/: SKILL.md
