[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/lukasmalkmus/pngx"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
todo = "deny"
dbg_macro = "deny"
cast_possible_truncation = "allow"
format_push_string = "allow"

[profile.release]
lto = true
strip = true
codegen-units = 1
