[package]
name = "pngx"
version = "0.5.1"
description = "CLI for Paperless NGX"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "pngx"
path = "src/main.rs"

[dependencies]
pngx-client = { path = "../pngx-client" }
anyhow = "1"
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
comfy-table = "7"
etcetera = "0.11"
figment = { version = "0.10", features = ["toml", "env"] }
jiff = "0.2"
open = "5"
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
